(core) prevent execution headings from bleeding into page headings (#2478)

--- a/app/scripts/modules/core/application/application.less
+++ b/app/scripts/modules/core/application/application.less
@@ -5,6 +5,7 @@
   margin-bottom: 0;
   background-color: #f8f8f8;
   flex: 0 0 auto;
+  z-index: 3;
   .application-name {
     display: inline-block;
   }
