--- a/app/scripts/modules/core/delivery/executions/executions.less
+++ b/app/scripts/modules/core/delivery/executions/executions.less
@@ -7,8 +7,8 @@ executions {
     margin-left: -8px;
     position: relative;
     z-index: 20;
-    padding: 10px 0 0 0;
-    margin-top: -10px;
+    padding: 20px 0 0 0;
+    margin-top: -20px;
     background-color: @lightest_grey;
     .execution-filters {
       padding-bottom: 5px;
